Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_4강.ipynb
+++ b/오픈소스_데이터_분석_4강.ipynb
@@ -51,29 +51,14 @@
         "import pandas as pd\n",
         "\n",
         "## data.csv 파일 읽기\n",
-        "df = pd.read_csv('data.csv', encoding='utf-8', sep=',', header=0,\n",
-        "                 index_col=None, nrows=None)\n",
+        "\n",
         "print(df)"
       ],
       "metadata": {
-        "id": "2Y2HEiaiRwAI",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f3695a98-8403-410a-aaab-a4775b6aeeb9"
+        "id": "2Y2HEiaiRwAI"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "           날짜    체중  골격근량  체지방량\n",
-            "0  2025.02.06  64.7  30.0  11.1\n",
-            "1  2025.02.04  64.0  29.3  11.6\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -92,35 +77,16 @@
         "import pandas as pd\n",
         "\n",
         "## data.json 파일 출력\n",
-        "with open('data.json', mode='r', encoding='utf-8') as f:\n",
-        "    data = json.load(f)\n",
-        "print(data)\n",
         "\n",
         "## data.json 파일 DataFrame 읽기\n",
-        "df = pd.read_json('data.json', orient='records', encoding='utf-8')\n",
+        "\n",
         "print(df)"
       ],
       "metadata": {
-        "id": "IO8bsKekR0W_",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4d00a38b-61ea-46b2-d09c-a44593c4ffd1"
+        "id": "IO8bsKekR0W_"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'매출데이터': [{'월': '2025-01', '매출액': 1000000, '비용': 700000, '이익': 300000}, {'월': '2025-02', '매출액': 1200000, '비용': 800000, '이익': 400000}, {'월': '2025-03', '매출액': 1500000, '비용': 900000, '이익': 600000}]}\n",
-            "                                               매출데이터\n",
-            "0  {'월': '2025-01', '매출액': 1000000, '비용': 700000,...\n",
-            "1  {'월': '2025-02', '매출액': 1200000, '비용': 800000,...\n",
-            "2  {'월': '2025-03', '매출액': 1500000, '비용': 900000,...\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -140,20 +106,34 @@
         "with open('callcenter20250301.log', 'r', encoding='utf-8') as f:\n",
         "    content = f.read()\n",
         "## 주민등록번호 패턴 생성\n",
+        "pattern = re.compile(r'(\\d{6})-(\\d{7})')\n",
         "\n",
         "## 주민등록번호 마스킹\n",
-        "\n",
+        "masked_content = pattern.sub(r'\\1-*******', content)\n",
         "\n",
         "## 마스킹된 파일(callcenter20250301_masked.log) 오픈 및 쓰기\n",
-        "\n",
+        "with open('callcenter20250301_masked.log', mode='w') as file:\n",
+        "    file.write(masked_content)\n",
         "\n",
         "print(\"주민등록번호 마스킹 완료. 'callcenter20250301_masked.log.txt' 파일로 저장되었습니다.\")"
       ],
       "metadata": {
-        "id": "60qOf7uxVdAg"
+        "id": "60qOf7uxVdAg",
+        "outputId": "515314ad-8ebe-4ae3-ff49-477ccfb0ba89",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "주민등록번호 마스킹 완료. 'callcenter20250301_masked.log.txt' 파일로 저장되었습니다.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -179,8 +159,11 @@
         "\n",
         "try:\n",
         "    ## URL 및 파라미터 전송\n",
+        "    response = requests.get(url, params=params)\n",
+        "    response.raise_for_status()\n",
         "\n",
         "    ## JSON 데이터 읽기\n",
+        "    data = response.json()\n",
         "\n",
         "    print(\"API 응답:\", data)\n",
         "    print(\"서울시 종로구의 현재 온도는 : {0}{1} 입니다.\".format(data['current']['temperature_2m'], data['current_units']['temperature_2m']))\n",
@@ -191,10 +174,23 @@
         "    print(f\"JSON 파싱 실패: {e}\")"
       ],
       "metadata": {
-        "id": "JpmgdsW9V0CY"
+        "id": "JpmgdsW9V0CY",
+        "outputId": "46e7b47c-b3a0-4ec3-8954-909009236a47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "API 응답: {'latitude': 37.6, 'longitude': 127.0, 'generationtime_ms': 0.03600120544433594, 'utc_offset_seconds': 0, 'timezone': 'GMT', 'timezone_abbreviation': 'GMT', 'elevation': 29.0, 'current_units': {'time': 'iso8601', 'interval': 'seconds', 'temperature_2m': '°C'}, 'current': {'time': '2025-12-12T08:30', 'interval': 900, 'temperature_2m': 3.7}}\n",
+            "서울시 종로구의 현재 온도는 : 3.7°C 입니다.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -240,22 +236,55 @@
         "driver = webdriver.Chrome(options=chrome_options)\n",
         "\n",
         "## 사이트 접속\n",
-        "\n",
+        "url = 'https://professor.knou.ac.kr/jaehwachung/index.do'\n",
+        "driver.get(url)\n",
         "\n",
         "## 사이트 접속 대기\n",
-        "\n",
+        "time.sleep(2)\n",
         "\n",
         "## 페이지 제목 출력\n",
+        "page_sourse = driver.page_sourse\n",
+        "tree = html.fromstring(page_source)\n",
         "\n",
+        "title_text= tree.xpath('//title/text()')\n",
+        "print(title_text)\n",
         "\n",
         "## 드라이버 종료\n",
         "driver.quit()"
       ],
       "metadata": {
-        "id": "cRC8x3_iW0im"
+        "id": "cRC8x3_iW0im",
+        "outputId": "3827d8b7-3820-40d9-8827-3523eda85841",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 402
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'selenium'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-351503418.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mselenium\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mselenium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwebdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchrome\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mservice\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mService\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mChromeService\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mwebdriver_manager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchrome\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mChromeDriverManager\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mselenium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwebdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mby\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mlxml\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mhtml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'selenium'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
